--- a/motion_editing_with_gpt.ipynb
+++ b/motion_editing_with_gpt.ipynb
@@ -131,12 +131,12 @@
     "import numpy as np\n",
     "\n",
     "split = 'test'\n",
-    "with open(f'/data/CoMo/dataset/HumanML3D/{split}.txt', 'r') as f:\n",
+    "with open(f'./dataset/HumanML3D/{split}.txt', 'r') as f:\n",
     "    split_file_names = f.read().splitlines()\n",
     "print(f\"number of {split} samples: {len(split_file_names)}\")\n",
     "\n",
     "example_text = ['a person lowers their arms']\n",
-    "text_dir = '/data/CoMo/dataset/HumanML3D/texts'\n",
+    "text_dir = './dataset/HumanML3D/texts'\n",
     "\n",
     "file_names = []\n",
     "retrieved_texts = []\n",
@@ -165,10 +165,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "motion_dir = '/data/CoMo/dataset/HumanML3D/new_joint_vecs'\n",
-    "motion_coord_dir = '/data/CoMo/dataset/HumanML3D/new_joints'\n",
-    "code_dir = '/data/CoMo/dataset/HumanML3D/codes'\n",
-    "text_dir = '/data/CoMo/dataset/HumanML3D/texts'"
+    "motion_dir = './dataset/HumanML3D/new_joint_vecs'\n",
+    "motion_coord_dir = './dataset/HumanML3D/new_joints'\n",
+    "code_dir = './dataset/HumanML3D/codes'\n",
+    "text_dir = './dataset/HumanML3D/texts'"
    ]
   },
   {
@@ -1265,8 +1265,8 @@
     "import ast\n",
     "date = timestamp\n",
     "time_stamp = time_str\n",
-    "reply_dir = f'/data/CoMo/motion_editing_result/{date}/reply/{time_stamp}'\n",
-    "cached_dir = f'/data/CoMo/motion_editing_result/{date}/gt'\n",
+    "reply_dir = f'./motion_editing_result/{date}/reply/{time_stamp}'\n",
+    "cached_dir = f'./motion_editing_result/{date}/gt'\n",
     "\n",
     "def parse_reply(file_path):\n",
     "    with open(file_path, 'r', encoding='utf-8') as f:\n",
@@ -1367,10 +1367,10 @@
     "int_indices = []\n",
     "texts = []\n",
     "edit_texts = []\n",
-    "edit_mode = 'custom_edit'\n",
+    "edit_mode = 'gpt_edit'\n",
     "\n",
     "if edit_mode == 'gpt_edit':\n",
-    "    prompt_dir = f'/data/CoMo/motion_editing_result/{date}/prompt'\n",
+    "    prompt_dir = f'./motion_editing_result/{date}/prompt'\n",
     "\n",
     "for sample_id in sample_ids:\n",
     "    code_motion = np.load(pjoin(cached_dir, 'codes', f'{sample_id}.npy'))\n",
@@ -1410,9 +1410,8 @@
     "import yaml\n",
     "import argparse\n",
     "\n",
-    "checkpoint_dir = '/data/CoMo/my_exp_result/2025_09_27_Dec_ver_using_residual_pose_temporal_complementor_ver_res_drop_detach_p_latent_with_soft_quantizer_try_12_unuse_ema_cb_size_512_num_quantizer_6_drop_p_ver_2/2025-09-27_12-49-50'\n",
-    "\n",
-    "exp_name = checkpoint_dir.split('/')[-2]\n",
+    "checkpoint_dir = './pretrained/exp_pg_tokenizer'\n",
+    "exp_name = checkpoint_dir.split('/')[-1]\n",
     "print(exp_name)\n",
     "\n",
     "config = pjoin(checkpoint_dir, 'arguments.yaml')\n",
@@ -1514,7 +1513,7 @@
     "edited_codes = []\n",
     "target_lens = []\n",
     "mot_downsampled_list = []\n",
-    "edit_mode = 'custom_edit' # or 'gpt'"
+    "edit_mode = 'gpt_edit' # or 'gpt'"
    ]
   },
   {
